# Roam

./: LICENSE.md  README.md  contribute.md  index.html  package-lock.json  package.json  postcss.config.js  vite.config.ts  vitest.setup.ts
.github/workflows/: release.yml
public/fonts/: OFL.txt
src/: App.tsx  Loading.tsx  PhaserWrapper.tsx  SettingsWindow.module.css  SettingsWindow.tsx  main.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: app-commands.toml
src-tauri/src/: main.rs
src-tauri/src/app/: cmd.rs  conf.rs  mod.rs  tray.rs  utils.rs
src-tauri/src/app/default/: settings.json
src/__tests__/components/: component.test.tsx
src/__tests__/functions/: calendar.test.ts  function.test.ts
src/hooks/: usePets.tsx  useSettingStore.tsx  useSettingTabStore.tsx  useSettings.tsx
src/locale/en/: translation.json
src/locale/kh/: translation.json
src/locale/zh-CN/: translation.json
src/locale/zh-TW/: translation.json
src/scenes/: Pet.ts  Pets.ts  manager.ts
src/types/: IEvents.ts  ISetting.ts  ISpriteConfig.ts
src/types/components/: type.ts
src/types/hooks/: type.ts
src/ui/components/: PetCard.module.css  PetCard.tsx
src/ui/pop_up/: Updater.tsx
src/ui/reminders/: ReminderBanner.tsx  ReminderFlightOverlay.tsx  fitReminderBannerText.ts  flight.ts
src/ui/settings/: types.ts
src/ui/settings/layout/: PageHeader.module.css  PageHeader.tsx  SectionCard.tsx
src/ui/settings/navigation/: SettingsSidebarNav.tsx  SettingsSidebarNavItem.module.css  SettingsSidebarNavItem.tsx
src/ui/settings/tabs/: AboutTab.tsx  AddCustomPetTab.tsx  (+9 more)
src/utils/: event.ts  handleSettingChange.ts  index.ts  notification.tsx  runtime.ts  settings.ts  update.tsx
(+8 files in other folders)
