[package]
name = "roam"
version = "0.0.1"
description = "companion such as pets, anime characters on your screen"
authors = ["Tsounguinzo"]
license = "MIT"
repository = "https://github.com/Tsounguinzo/Roam"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "protocol-asset", "macos-private-api", "tray-icon"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
mouse_position = "0.1.4"
log = "^0.4.30"
open = "5.3.5"
tokio = "1.52.3"
dirs = "6"
base64 = "0.22.1"
rand = "0.8.5"
reqwest = { version = "0.13.1", features = ["json"] }
sha2 = "0.10.8"
tauri-plugin-store = "2"
tauri-plugin-single-instance = { version = "2" }
tauri-plugin-log = { version = "2" }
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSWindow"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
